ensure aligncenter images do not extend beyond content container

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -312,6 +312,8 @@ img {
 .aligncenter {
   display: block;
   margin: 15px auto;
+	max-width: 100%;
+	height: auto;
 }
 
 .topimage {
